fix(our-team) : improve animation and quotes display (#11)
* improve team images hover and quote

* make the background image cover the container

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -552,9 +552,10 @@ body {
   .our-team {
     display: block;
     background: url("../images/home/content/team/bg-black.svg");
+    background-size:cover;
     width: 100%;
     height: max-content;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
 
     .team-title {
       position: relative;
@@ -610,13 +611,13 @@ body {
     }
 
     .team-presentation {
-      padding: 70px 0px 70px 0px;
+      padding: 70px 0px 0px 0px;
       display: block;
 
       .container {
         position: relative;
         width: 100%;
-        height: 100%;
+        height: max-content;
         display: block;
         overflow: hidden;
       }
@@ -660,6 +661,7 @@ body {
         display: inline-block;
         width: 300px;
         padding-left: 32px;
+        transition: 0.5s;
 
         .person-photo {
           .second-photo {
@@ -680,15 +682,26 @@ body {
           background-color: #ffed15;
           display: none;
           width: 80%;
-          height: 100px;
+          height: 80px;
           bottom: 168px;
-          padding: 10px;
+          padding: 16px;
           font: 20px/31px Roboto;
           font-size: clamp(1rem, 1.1vw, 1.1rem);
-          overflow: hidden;
-          text-overflow: ellipsis;
           text-align: center;
-          line-height: 100px;
+
+          span {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            width: inherit;
+            white-space: normal;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+          }
         }
 
         .quote-bg {
@@ -784,18 +797,20 @@ body {
 
       .item:hover,
       .item:active {
-        transition: 0.3s;
+        transition: 0.7s;
         padding: 0px 62px 0 62px;
 
         .person-photo {
           transform: rotate(5deg) scale(1.1) translateX(-5%);
           padding-bottom: 32px;
+          transition: 0.2s;
           &::after {
             bottom: -10%;
           }
         }
 
         .person-quote {
+          width: 70%;
           display: block;
         }
 
@@ -810,6 +825,14 @@ body {
         }
       }
 
+      .item:hover,
+      .item:active {
+        transition: none;
+        .person-quote {
+          display: block;
+        }
+      }
+      
       .last-item {
         margin-right: 150px;
       }
@@ -1328,7 +1351,7 @@ body {
     }
 
     .our-team {
-      padding-bottom: 15%;
+      padding-bottom: 10%;
       .team-title {
         margin-left: 10px;
         padding-top: 48px;
@@ -1367,6 +1390,10 @@ body {
         .item {
           width: 200px;
 
+          .person-quote {
+            bottom: 120px;
+          }
+
           .person-details {
             padding-top: 16px;
             padding-bottom: 16px;
@@ -1388,9 +1415,8 @@ body {
           }
 
           .person-quote {
-            width: 60%;
-            height: 80px;
-            line-height: 80px;
+            width: 65%;
+            height: 65px;
           }
         }
 
